--- a/build.gradle
+++ b/build.gradle
@@ -9,8 +9,8 @@ plugins {
 
 sonarqube {
 	properties {
-		property "sonar.projectKey", "JCASTANO_ingsw3"
-		property "sonar.organization", "jcastano"
+		property "sonar.projectKey", "EstebanColoradoGonzalez_IngenieriaDeSoftware"
+		property "sonar.organization", "estebancoloradogonzalez"
 		property "sonar.host.url", "https://sonarcloud.io"
 	}
 }
