--- a/build.gradle
+++ b/build.gradle
@@ -9,8 +9,8 @@ plugins {
 
 sonarqube {
 	properties {
-		property "sonar.projectKey", "EstebanColoradoGonzalez_IngenieriaDeSoftware"
-		property "sonar.organization", "estebancoloradogonzalez"
+		property "sonar.projectKey", "JCASTANO_ingsw3"
+		property "sonar.organization", "jcastano"
 		property "sonar.host.url", "https://sonarcloud.io"
 	}
 }
@@ -30,10 +30,14 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-undertow'
 
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'mysql:mysql-connector-java:8.0.28'
+	//implementation 'mysql:mysql-connector-java:8.0.28'
+	implementation 'com.h2database:h2:2.1.210'
 
 	testImplementation 'com.h2database:h2:2.1.210'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	compileOnly 'org.projectlombok:lombok:1.18.20'
+	annotationProcessor 'org.projectlombok:lombok:1.18.20'
 }
 
 tasks.named('test') {
