--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,34 +1,21 @@
 name: CI
 on:
   push:
-    branches: [main]
+    branches: [master]
   pull_request:
-    branches: [main]
+    branches: [master]
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Set up JDK 17
-        uses: actions/setup-java@v2
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
         with:
-          java-version: 17
-          distribution: 'adopt'
-          cache: gradle
-      - name: Cache SonarCloud packages
-        uses: actions/cache@v1
+          java-version: 1.8
+      - name: Deploy to heroku using an action
+        uses: akhileshns/heroku-deploy@v3.2.6
         with:
-          path: ~/.sonar/cache
-          key: ${{ runner.os }}-sonar
-          restore-keys: ${{ runner.os }}-sonar
-      - name: Compile
-        run: ./gradlew compileJava
-      - name: Test
-        run: ./gradlew test
-      - name: Jar
-        run: ./gradlew bootJar
-      - name: analyze
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: ./gradlew sonarqube --info
+          heroku_api_key: ${{secrets.HEROKU_API_TOKEN}}
+          heroku_app_name: "sw3-trm" #Must be unique in Heroku
+          heroku_email: "estebancastanorincon@gmail.com"
