--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,9 +1,9 @@
 name: CI
 on:
   push:
-    branches: [master]
+    branches: [main]
   pull_request:
-    branches: [master]
+    branches: [main]
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -18,4 +18,4 @@ jobs:
         with:
           heroku_api_key: ${{secrets.HEROKU_API_TOKEN}}
           heroku_app_name: "sw3-trm" #Must be unique in Heroku
-          heroku_email: "estebancastanorincon@gmail.com"
+          heroku_email: "estebancoloradogonzalez@gmail.com"
